--- a/starter/templates/base.html
+++ b/starter/templates/base.html
@@ -66,7 +66,7 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <a href="/" class="brand">{{ config["PROJECT_NAME"] }}</a>
+                    <a href="/" class="brand">{{ config["PROJECT_NAME"].title() }}</a>
             </div>
         </div>
 
