Add error pages, improve login

--- a/starter/templates/security/forgot_password.html
+++ b/starter/templates/security/forgot_password.html
@@ -1,7 +1,7 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <h1>Reset your password</h1>
+    <legend>Reset your password</legend>
     <form class="form form-horizontal" action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
         {{ forgot_password_form.csrf_token }}
 
