--- a/starter/templates/security/change_password.html
+++ b/starter/templates/security/change_password.html
@@ -1,7 +1,7 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <h1>Change password</h1>
+    <legend>Change password</legend>
     <form class="form form-horizontal" action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
         {{ change_password_form.csrf_token }}
 
