--- a/starter/templates/security/register_user.html
+++ b/starter/templates/security/register_user.html
@@ -1,7 +1,7 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <h1>Register</h1>
+    <legend>Register</legend>
     <form class="form form-horizontal" action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
         {{ register_user_form.csrf_token }}
 
