--- a/starter/templates/security/reset_password.html
+++ b/starter/templates/security/reset_password.html
@@ -1,7 +1,7 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <h1>Reset password</h1>
+    <legend>Reset password</legend>
     <form class="form form-horizontal" action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
         {{ login_user_form.csrf_token }}
 
