--- a/starter/templates/security/send_confirmation.html
+++ b/starter/templates/security/send_confirmation.html
@@ -1,7 +1,7 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <h1>Resend confirmation email</h1>
+    <legend>Resend confirmation email</legend>
     <form class="form form-horizontal" action="{{ url_for_security('send_confirmation') }}" method="POST" name="send_confirmation_form">
         {{ send_confirmation_form.csrf_token }}
 
