Fix templates according to security options

--- a/starter/templates/security/login_user.html
+++ b/starter/templates/security/login_user.html
@@ -15,8 +15,14 @@
     </form>
 
     <p>
-        Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
-        <a href="{{ url_for_security('forgot_password') }}">Forgot your password?</a><br />
-        Didn't receive your confirmation email? <a href="{{ url_for_security('send_confirmation') }}">Resend confirmation email</a>
+        {% if security.registerable %}
+            Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
+        {% endif %}
+        {% if security.recoverable %}
+            <a href="{{ url_for_security('forgot_password') }}">Forgot your password?</a><br />
+        {% endif %}
+        {% if security.confirmable %}
+            Didn't receive your confirmation email? <a href="{{ url_for_security('send_confirmation') }}">Resend confirmation email</a>
+        {% endif %}
     </p>
 {% endblock %}
