Update to Bootstrap 3

--- a/starter/templates/errors/base.html
+++ b/starter/templates/errors/base.html
@@ -11,7 +11,7 @@
     }
 </style>
 
-<div class="hero-unit center">
+<div class="jumbotron center">
     {% block error_content %}
     {% endblock %}
 
