--- a/starter/templates/security/change_password.html
+++ b/starter/templates/security/change_password.html
@@ -1,20 +1,27 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <legend>Change password</legend>
-    <form class="form form-horizontal" action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
-        {{ change_password_form.csrf_token }}
+  <div class="page-header">
+    <h1>Change your password</h1>
+  </div>
 
-        {{ wtf.horizontal_field(change_password_form.password) }}
-        {{ wtf.horizontal_field(change_password_form.new_password) }}
-        {{ wtf.horizontal_field(change_password_form.new_password_confirm) }}
+  <form class="form form-horizontal" action="{{ url_for_security('change_password') }}" method="POST" name="change_password_form">
+    {{ change_password_form.csrf_token }}
 
-        <div class="form-actions">
-            <input type="submit" value="Change password" class="btn btn-primary" />
-        </div>
-    </form>
+    {{ wtf.horizontal_field(change_password_form.password) }}
+    {{ wtf.horizontal_field(change_password_form.new_password) }}
+    {{ wtf.horizontal_field(change_password_form.new_password_confirm) }}
 
-    <p>
-        Remembered your password? <a href="{{ url_for_security('login') }}">Try and login</a>
-    </p>
+    <div class="col-lg-offset-2">
+      <input type="submit" value="Change password" class="btn btn-primary" />
+    </div>
+  </form>
+
+  <br />
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+      Remembered your password? <a href="{{ url_for_security('login') }}">Try and login</a>
+    </div>
+  </div>
 {% endblock %}
