--- a/starter/templates/security/reset_password.html
+++ b/starter/templates/security/reset_password.html
@@ -1,19 +1,26 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <legend>Reset password</legend>
-    <form class="form form-horizontal" action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
-        {{ login_user_form.csrf_token }}
+  <div class="page-header">
+    <h1>Reset your password</h1>
+  </div>
 
-        {{ wtf.horizontal_field(reset_password_form.password) }}
-        {{ wtf.horizontal_field(reset_password_form.password_confirm) }}
+  <form class="form form-horizontal" action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
+    {{ login_user_form.csrf_token }}
 
-        <div class="form-actions">
-            <input type="submit" value="Reset password" class="btn btn-primary" />
-        </div>
-    </form>
+    {{ wtf.horizontal_field(reset_password_form.password) }}
+    {{ wtf.horizontal_field(reset_password_form.password_confirm) }}
 
-    <p>
-        Remembered your password? <a href="{{ url_for_security('login') }}">Try and login</a>
-    </p>
+    <div class="col-lg-offset-2">
+      <input type="submit" value="Reset password" class="btn btn-primary" />
+    </div>
+  </form>
+
+  <br />
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+      Remembered your password? <a href="{{ url_for_security('login') }}">Try and login</a>
+    </div>
+  </div>
 {% endblock %}
