--- a/starter/templates/base.html
+++ b/starter/templates/base.html
@@ -1,4 +1,4 @@
-{% import "macros/bootstrap_wtf.html" as wtf %}
+{% import "macros/wtf.html" as wtf %}
 
 <!DOCTYPE html>
 <html{% block html_attribs %} lang="en"{% endblock %}>
@@ -18,13 +18,11 @@
 
         {%- block style %}
             {% if ASSETS_USE_CDN %}
-                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css">
-                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css">
-                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.2/css/font-awesome.min.css">
+                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css">
+                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css">
             {% else %}
-                <link rel="stylesheet" href="/static/styles/dependencies/bootstrap.min.css">
-                <link rel="stylesheet" href="/static/styles/dependencies/bootstrap-responsive.min.css">
-                <link rel="stylesheet" href="/static/styles/dependencies/font-awesome.min.css">
+                <link rel="stylesheet" href="/static/dependencies/bootstrap/css/bootstrap.min.css">
+                <link rel="stylesheet" href="/static/dependencies/font-awesome/css/font-awesome.min.css">
             {% endif %}
 
             <!-- Generated stylesheets -->
@@ -36,17 +34,17 @@
         {% if ASSETS_USE_CDN %}
             <script src="//cdnjs.cloudflare.com/ajax/libs/headjs/0.99/head.min.js" type="text/javascript"></script>
         {% else %}
-            <script src="/static/scripts/dependencies/head.min.js" type="text/javascript"></script>
+            <script src="/static/dependencies/head.min.js" type="text/javascript"></script>
         {% endif %}
 
         <script type="text/javascript">
             head.js(
                 {%- if ASSETS_USE_CDN %}
-                    "//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js",
-                    "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js",
+                    "//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js",
+                    "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js",
                 {% else %}
-                    "/static/scripts/dependencies/jquery.min.js",
-                    "/static/scripts/dependencies/bootstrap.min.js",
+                    "/static/dependencies/jquery-1.10.2.min.js",
+                    "/static/dependencies/bootstrap/js/bootstrap.min.js",
                 {% endif -%}
 
                 {%- assets "coffee_scripts" -%}
@@ -63,34 +61,34 @@
     <body>
     {%- block body %}
         {%- block body_content %}
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a href="/" class="brand">{{ config["PROJECT_NAME"].title() }}</a>
-                    <ul class="nav">
-                        {%- for endpoint, caption in [
-                            ('index', 'Home')
-                        ] %}
-                            <li{% if endpoint == request.endpoint %} class="active"{% endif %}>
-                                <a href={{url_for(endpoint) }}>{{ caption }}</a>
-                            </li>
-                        {%- endfor %}
-
-                        {% if current_user.has_role("admin") %}
-                            <li{% if 'admin' == request.endpoint %} class="active"{% endif %}>
-                                <a href="/admin">Admin</a>
-                            </li>
-                        {% endif %}
-                    </ul>
-
-                    <ul class="nav pull-right">
-                    {% if current_user.is_active() %}
-                        <li><a href={{url_for_security('logout')}}>Logout</a></li>
-                    {% else %}
-                        <li><a href={{url_for_security('login')}}>Login</a></li>
-                    {% endif %}
-                    </ul>
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <a href="/" class="navbar-brand">{{ config["PROJECT_NAME"].title() }}</a>
                 </div>
+                <ul class="nav navbar-nav">
+                    {%- for endpoint, caption in [
+                        ('index', 'Home')
+                    ] %}
+                        <li{% if endpoint == request.endpoint %} class="active"{% endif %}>
+                            <a href={{url_for(endpoint) }}>{{ caption }}</a>
+                        </li>
+                    {%- endfor %}
+
+                    {% if current_user.has_role("admin") %}
+                        <li{% if 'admin' == request.endpoint %} class="active"{% endif %}>
+                            <a href="/admin">Admin</a>
+                        </li>
+                    {% endif %}
+                </ul>
+
+                <ul class="nav navbar-nav pull-right">
+                {% if current_user.is_active() %}
+                    <li><a href={{url_for_security('logout')}}>Logout</a></li>
+                {% else %}
+                    <li><a href={{url_for_security('login')}}>Login</a></li>
+                {% endif %}
+                </ul>
             </div>
         </div>
 
@@ -102,7 +100,7 @@
                     {% if loop.first %}
                         <br />
                     {% endif %}
-                    <div class="alert alert-{{ category }}">
+                    <div class="alert alert-{{ category|alert_class }}">
                         <button type="button" class="close" data-dismiss="alert">&times;</button>
                         {{ msg }}
                     </div>
@@ -117,10 +115,10 @@
         {%- endblock body_inner %}
         {%- endblock body_content %}
 
-        {%- if config['BOOTSTRAP_GOOGLE_ANALYTICS_ACCOUNT'] %}
+        {%- if config['GOOGLE_ANALYTICS_ACCOUNT'] %}
             <script type="text/javascript">
                 var _gaq = _gaq || [];
-                _gaq.push(['_setAccount', '{{config['BOOTSTRAP_GOOGLE_ANALYTICS_ACCOUNT']}}']);
+                _gaq.push(['_setAccount', '{{config['GOOGLE_ANALYTICS_ACCOUNT']}}']);
                 _gaq.push(['_trackPageview']);
 
                 (function() {
