--- a/starter/templates/security/forgot_password.html
+++ b/starter/templates/security/forgot_password.html
@@ -1,21 +1,28 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <legend>Reset your password</legend>
-    <form class="form form-horizontal" action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
-        {{ forgot_password_form.csrf_token }}
+  <div class="page-header">
+    <h1>Reset your password</h1>
+  </div>
 
-        {{ wtf.horizontal_field(forgot_password_form.email) }}
+  <form class="form form-horizontal" action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
+    {{ forgot_password_form.csrf_token }}
 
-        <div class="form-actions">
-            <input type="submit" value="Reset password" class="btn btn-primary" />
-        </div>
-    </form>
+    {{ wtf.horizontal_field(forgot_password_form.email) }}
 
-    <p>
-        {% if security.registerable %}
-            Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
-        {% endif %}
-        Remembered your password? <a href="{{ url_for_security('login') }}">Try and login</a>
-    </p>
+    <div class="col-lg-offset-2">
+      <input type="submit" value="Reset password" class="btn btn-primary" />
+    </div>
+  </form>
+
+  <br />
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+      {% if security.registerable %}
+        Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
+      {% endif %}
+      Remembered your password? <a href="{{ url_for_security('login') }}">Try and login</a>
+    </div>
+  </div>
 {% endblock %}
