--- a/starter/templates/security/login_user.html
+++ b/starter/templates/security/login_user.html
@@ -1,28 +1,35 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <legend>Login</legend>
-    <form class="form form-horizontal" action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
-        {{ login_user_form.csrf_token }}
+  <div class="page-header">
+    <h1>Login</h1>
+  </div>
 
-        {{ wtf.horizontal_field(login_user_form.email) }}
-        {{ wtf.horizontal_field(login_user_form.password) }}
-        {{ wtf.horizontal_field(login_user_form.remember) }}
+  <form class="form form-horizontal" action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
+    {{ login_user_form.csrf_token }}
 
-        <div class="form-actions">
-            <input type="submit" value="Login" class="btn btn-primary" />
-        </div>
-    </form>
+    {{ wtf.horizontal_field(login_user_form.email) }}
+    {{ wtf.horizontal_field(login_user_form.password) }}
+    {{ wtf.horizontal_field(login_user_form.remember) }}
 
-    <p>
-        {% if security.registerable %}
-            Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
-        {% endif %}
-        {% if security.recoverable %}
-            <a href="{{ url_for_security('forgot_password') }}">Forgot your password?</a><br />
-        {% endif %}
-        {% if security.confirmable %}
-            Didn't receive your confirmation email? <a href="{{ url_for_security('send_confirmation') }}">Resend confirmation email</a>
-        {% endif %}
-    </p>
+    <div class="col-lg-offset-2">
+      <input type="submit" value="Login" class="btn btn-primary" />
+    </div>
+  </form>
+
+  <br />
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+      {% if security.registerable %}
+        Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
+      {% endif %}
+      {% if security.recoverable %}
+        <a href="{{ url_for_security('forgot_password') }}">Forgot your password?</a><br />
+      {% endif %}
+      {% if security.confirmable %}
+        Didn't receive your confirmation email? <a href="{{ url_for_security('send_confirmation') }}">Resend confirmation email</a>
+      {% endif %}
+    </div>
+  </div>
 {% endblock %}
