--- a/starter/templates/security/send_confirmation.html
+++ b/starter/templates/security/send_confirmation.html
@@ -1,23 +1,29 @@
 {% extends "security/base.html" %}
 
 {% block security_content %}
-    <legend>Resend confirmation email</legend>
-    <form class="form form-horizontal" action="{{ url_for_security('send_confirmation') }}" method="POST" name="send_confirmation_form">
-        {{ send_confirmation_form.csrf_token }}
+  <div class="page-header">
+    <h1>Resend your confirmation email</h1>
+  </div>
+  <form class="form form-horizontal" action="{{ url_for_security('send_confirmation') }}" method="POST" name="send_confirmation_form">
+    {{ send_confirmation_form.csrf_token }}
 
-        {{ wtf.horizontal_field(send_confirmation_form.email) }}
+    {{ wtf.horizontal_field(send_confirmation_form.email) }}
 
-        <div class="form-actions">
-            <input type="submit" value="Login" class="btn btn-primary" />
-        </div>
-    </form>
+    <div class="col-lg-offset-2">
+      <input type="submit" value="Login" class="btn btn-primary" />
+    </div>
+  </form>
 
-    <p>
-        {% if security.registerable %}
-            Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
-        {% endif %}
-        {% if security.recoverable %}
-            <a href="{{ url_for_security('forgot_password') }}">Forgot your password?</a>
-        {% endif %}
-    </p>
+  <br />
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+      {% if security.registerable %}
+        Don't have an account yet? <a href="{{ url_for_security('register') }}">Create a new account</a><br />
+      {% endif %}
+      {% if security.recoverable %}
+        <a href="{{ url_for_security('forgot_password') }}">Forgot your password?</a>
+      {% endif %}
+    </div>
+  </div>
 {% endblock %}
