Fix reset password page

--- a/starter/templates/security/reset_password.html
+++ b/starter/templates/security/reset_password.html
@@ -6,7 +6,7 @@
   </div>
 
   <form class="form form-horizontal" action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
-    {{ login_user_form.csrf_token }}
+    {{ reset_password_form.csrf_token }}
 
     {{ wtf.horizontal_field(reset_password_form.password) }}
     {{ wtf.horizontal_field(reset_password_form.password_confirm) }}
