--- a/starter/templates/security/email/welcome.html
+++ b/starter/templates/security/email/welcome.html
@@ -7,5 +7,5 @@
 <p>You can confirm your email through the link below:</p>
 
 <p><a href="{{ confirmation_link }}">Confirm my account</a></p>
-{% endif %''}
+{% endif %}
 {% endblock %}
